# SPM-Closed-Loop-Wrist

spm_wrist_description/: CMakeLists.txt  package.xml
spm_wrist_description/launch/: spm_gazebo.launch.py  spm_wrist_display.launch.py
spm_wrist_description/meshes/: AxisConnector_v3_1.stl  AxisConnector_v3_2.stl  AxisConnector_v3_3.stl  Bottom_v2_1.stl  Bottom_v2_2.stl  Bottom_v2_3.stl  LngSpur_v2_1.stl  LongArm_v2_1.stl  MidSpur_v2_1.stl  MiddleArm_v2_1.stl  PlatformSupportLink_v2_1.stl  PlatformSupportLink_v2_2.stl  PlatformSupportLink_v2_3.stl  Platform_v2_1.stl  Ring_v2_1.stl  Ring_v2_2.stl  Ring_v2_3.stl  ShortArm_v2_1.stl  SrtSpur_v2_1.stl  Top_v2_1.stl  base_link.stl  dummy1_1.stl  dummy2_1.stl  servo_motor_v2_1.stl  servo_motor_v2_2.stl  servo_motor_v2_3.stl
spm_wrist_description/rviz/: spm_wrist.rviz
spm_wrist_description/scripts/: spm_sdf_pybullet.py  spm_urdf_pybullet.py
spm_wrist_description/urdf/: gazebo_closed_loop_joints.xacro  materials.xacro  spm.urdf.xacro  spm.xacro  spm_wrist.sdf  spm_wrist.urdf
