<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spm_wrist_description</name>
  <version>0.0.0</version>
<description>The spm_wrist_description package</description>
  <maintainer email="mwarari.nixon@gmail.com">Nixon Mwarari</maintainer>
  <maintainer email="newtonkaris45@gmail.com">Newton Kariuki</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
